# FoodVerse

./: .gitignore  README.md  TESTING_GUIDE.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
FoodVerse-ai/: .dockerignore  Dockerfile  app.py  requirements.txt
FoodVerse-ai/src/: app_factory.py
FoodVerse-backend/: .dockerignore  .env  .env.example  Dockerfile  Makefile  go.mod  go.sum  main.go
FoodVerse-backend/cmd/: main.go  make.go  root.go
FoodVerse-backend/docs/: docs.go  swagger.json  swagger.yaml
FoodVerse-backend/migrations/: migration.go  user_migrations.go
FoodVerse-frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
FoodVerse-frontend/app/: layout.tsx  page.tsx  theme-provider-with-color-scheme.tsx
FoodVerse-frontend/components/: explore-map.tsx  food-listings.tsx  how-it-works.tsx  mode-toggle.tsx  seller-highlights.tsx  site-footer.tsx  site-header.tsx  theme-toggle-button.tsx
FoodVerse-frontend/src/: App.tsx  index.css  main.tsx  setup-test-data.js  test-auth-fixed.cjs  test-auth-fixed.js  test-auth.js  test-complete-flow.js  test-complete-seller-workflow.cjs  test-consumer-seller-request.js  test-edge-cases.cjs  test-end-to-end.js  test-food-bag-management.cjs  test-foodbag-debug.cjs  test-jwt-debug.js  test-jwt-simple.js  test-navbar-integration.js  test-registration.js  test-seller-auth-fixed.js  test-seller-auth.js  test-seller-request.cjs  (+3 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+88 files in other folders)
