[package]
name = "foodverse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "foodverse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.36", features = ["full"] }
sea-orm-migration = "0.12"
argon2 = "0.5.0"
# Optional if you need time/date handling in future:
# chrono = { version = "0.4.31", features = ["serde"] }